@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-12T08:12:36Z",
-  "count_outdated" : 159,
-  "uniques_outdated" : 133,
+  "timestamp" : "2023-08-13T08:12:15Z",
+  "count_outdated" : 160,
+  "uniques_outdated" : 134,
   "count" : 169,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-31T00:00:00Z",
       "count": 2,
